# epidemic-suppression-model

./: .gitignore  AUTHORS  README.md  pyproject.toml
epidemic_suppression_algorithms/: evolution_with_app_algorithm.py  free_evolution_algorithm.py  homogeneous_evolution_algorithm.py
epidemic_suppression_algorithms/model_blocks/: nu_and_tausigma.py  testing_time_and_b_t_suppression.py  time_evolution_block.py
examples/: R_suppression_examples.py  dependency_on_epidemic_data_examples.py  dependency_on_isolation_measures_parameters_examples.py  epidemic_data_examples.py  free_evolution_examples.py  homogeneous_scenario_evolution_examples.py  plotting_utils.py  scenario_with_app_evolution_examples.py
math_utilities/: config.py  discrete_distributions_utils.py  distributions_collection.py  general_utilities.py
model_utilities/: epidemic_data.py  scenarios.py
tests/: corner_cases_test.py  model_blocks_test.py  nu_tausigma_computation_test.py  utils_test.py
